<resources>
    <string name="app_name">clima</string>
    <string name="txt_search">Ex. Pasto,CO</string>
    <string name="btn_search">SEARCH WEATHER</string>
    <string name="current">Current:</string>
    <string name="current2">current weather</string>
    <string name="min">Min:</string>
    <string name="min2">min weather</string>
    <string name="max">Max:</string>
    <string name="max2">max weather</string>
    <string name="weather">Weather:</string>
    <string name="weather2">weather</string>
    <string name="btn_go">GO TO MAPS</string>
</resources>
