<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_search"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_search"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@color/current"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/current"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current2"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="@color/min"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/min"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min2"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@color/max"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/max"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblmax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max2"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@color/weather"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="7dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:text="@string/weather" />

            <TextView
                android:id="@+id/textViewWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weather2"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/bottom_bar" />

        <Button
            android:id="@+id/btnGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_go"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>